h2. Changelog

h3. Versión 2.1.1RC2

* Nuevo atributo noVisibleEvaluador en Criterios.
* Calculo de los criterios dependiendo de su valor máximo.
* Recalculados los criterios dependiendo del rol de quien los vea.
* Botón reevaluar en la tabla de evaluaciones.
* Fixed Minor Bug en Baremación.

h3. Versión 2.1.1RC1

* Mejorada y Optimizada la Carga de la Tabla de Tablas.
* Fixed Bug en Baremación.
* Nuevos rol de Evaluador.
* Fixed bug cuando existen varios botones con varios forms en la misma página.

h3. Versión 2.1

* Nuevo módulo de Presentación.
* Nuevo módulo de Desistimiento.
* Nuevo módulo de Seguimiento.
* Mejoras en Verificación.
* Mejoras en Tramitación.
* Mejoras en Baremación.
* Mejoras en DocumentaciónFAP.
* Mejoras en Aportación.
* Mejoras en el Servicio de Notificaciones.
* Mejoras en la página de Conceptos Económicos.
* Bootstrap adaptativo.
* Nueva funcionalidad de Funcionario Habilitado.
* Nueva funcionalida de ConfigurarMensajes.
* Nuevo elemento CCC, para representar una Cuenta Corriente Cliente.
* Nuevo elemento BarraDeslizante.
* Nuevo elemento RadioBooleano.
* Nuevo elemento DireccionMapa, utilizando la API de Google Place.
* Personalización de alguno tipos de atributos con iconos.
* Mejoras notables en los tipo Moneda.
* Mejoras en los números decimales.
* Mejoras en la configuración de los Jobs.
* Mejoras en los elementos Direcciones.
* Mejoras en el DatePicker, ahora usando Bootstrap.
* Se permite coloreado de tablas.
* Se permite incluir ejemplos de código.
* Se permite generar el javadoc del módulo desde una aplicación.
* Se permite añadir check a las tablas de popups.
* Se permite que los PopUp abarquen toda la pantalla (atributo maximizar).
* Nuevas funciones añadidas en algunos Modelos.
* Añadidos certificados en el firma-fs.
* Añadido método para mostrar información de la inyección de dependencias al iniciarse las aplicaciones.
* Añadiendo a cada página de FAP a que módulo pertenece.
* Se puede configurar el timeout de los servicios.