@@ -77,6 +77,6 @@ validation.recaptcha=El texto no se corresponde con la imagen mostrada.
 
 
 #Baremacion
-baremacion.fichaevaluador.end=Finalizar verificación
+baremacion.fichaevaluador.end=Finalizar Evaluación
 baremacion.fichaevaluador.guardar=Guardar
 baremacion.fichaevaluador.pdf=Obtener borrador en PDF
